<resources>
    <string name="app_name">BedrockPro</string>

    <string name="permission_is_not_granted">External storage permission is not granted</string>
    <string name="mcpe_is_not_installed">Minecraft PE is not installed</string>

    <string name="app_version">App version: %1$s</string>
    <string name="app_version_code">App version code: %1$s</string>

    <string name="about_title">About</string>
    <string name="about_author">Made by riku1227</string>
    <string name="about_github">Github</string>
    <string name="about_google_plus">Google+</string>
    <string name="about_youtube">Youtube</string>
    <string name="about_website">Website</string>

    <string name="drawer_home">Home</string>
    <string name="drawer_title_resource_pack">ResourcePack</string>
    <string name="drawer_resource_pack_gen">ResourcePackGen</string>
    <string name="drawer_title_behavior_pack">BehaviorPack</string>
    <string name="drawer_behavior_pack_gen">BehaviorPackGen</string>
    <string name="drawer_title_other">Other</string>
    <string name="drawer_util_mshook_gen">MSHookGen</string>
    <string name="drawer_util_backup_apk">Backup APK</string>

    <string name="backup_apk_start">Backup start</string>
    <string name="backup_apk_end">Backup end</string>
    <string name="backup_apk_to">Backup save to %1$s</string>

    <string name="resource_pack_gen_name">Name</string>
    <string name="resource_pack_gen_description">Description</string>
    <string name="resource_pack_gen_header_uuid">Header UUID</string>
    <string name="resource_pack_gen_module_uuid">Module UUID</string>
    <string name="resource_pack_gen_resource_cache">Cache default resource of MCBE in storage</string>
    <string name="resource_pack_gen_auto_gen_uuid">Automatically generate UUID</string>
    <string name="resource_pack_gen_custom_pack_icon">Custom pack icon</string>
    <string name="resource_pack_gen_generate">Generate</string>
    <string name="resource_pack_gen_pick_custom_icon">Pick custom icon</string>
    <string name="resource_pack_gen_sub_pack_editor">Subpack Editor</string>
    <string name="resource_pack_gen_delete_cache">Delete Cache</string>
    <string name="resource_pack_gen_icon">Icon</string>
    <string name="resource_pack_gen_sub_pack_name">Sub pack name</string>
    <string name="resource_pack_gen_sub_pack_directory">Sub pack directory</string>
    <string name="resource_pack_gen_sub_pack_memory_tier">Sub pack memory tier</string>
    <string name="resource_pack_gen_sub_pack_add">Add</string>
    <string name="resource_pack_gen_sub_pack_delete">Delete</string>
    <string name="resource_pack_gen_not_input_name">Please input resource pack name</string>
    <string name="resource_pack_is_exists">Same name resource pack is exists</string>
    <string name="resource_pack_sub_pack_not_input">Please input sub pack</string>
    <string name="resource_pack_gen_dialog_is_it_ok">Is it OK?</string>
    <string name="resource_pack_gen_dialog_name">Name: %1$s</string>
    <string name="resource_pack_gen_dialog_description">Description: %1$s</string>
    <string name="resource_pack_gen_dialog_header_uuid">Header UUID: %1$s</string>
    <string name="resource_pack_gen_dialog_module_uuid">Module UUID: %1$s</string>
    <string name="resource_pack_gen_dialog_progress_message_initial">…</string>
    <string name="resource_pack_gen_dialog_progress_message_unzip">Extracting APK</string>
    <string name="resource_pack_gen_dialog_progress_copy_resource">Copying resource to %1$s</string>
    <string name="resource_pack_gen_dialog_progress_delete_file">Deleting unnecessary file</string>
    <string name="resource_pack_gen_dialog_progress_edit_manifest">Editing manifest.json</string>
    <string name="resource_pack_gen_dialog_progress_delete_cache">Deleting cache</string>
    <string name="resource_pack_gen_dialog_delete_cache">Delete cache</string>
    <string name="resource_pack_gen_dialog_delete_cache_description">Do you want to delete the cache?</string>

    <string name="behavior_pack_gen_name">Name</string>
    <string name="behavior_gen_description">Description</string>
    <string name="behavior_pack_gen_header_uuid">Header UUID</string>
    <string name="behavior_pack_gen_module_uuid">Module UUID</string>
    <string name="behavior_pack_gen_dependencies">Dependencies</string>
    <string name="behavior_pack_gen_behavior_cache">Cache default behavior of MCBE in storage</string>
    <string name="behavior_pack_gen_auto_gen_uuid">Automatically generate UUID</string>
    <string name="behavior_pack_gen_custom_pack_icon">Custom pack icon</string>
    <string name="behavior_pack_gen_generate">Generate</string>
    <string name="behavior_pack_gen_pick_custom_icon">Pick custom icon</string>
    <string name="behavior_pack_gen_add_sub_pack">Add sub pack</string>
    <string name="behavior_pack_gen_delete_cache">Delete Cache</string>
    <string name="behavior_pack_gen_icon">Icon</string>

    <string name="mshook_gen_function_name">Function name</string>
    <string name="mshook_gen_return_value">Return value</string>
    <string name="mshook_gen_append_mode">Processing append mode(unfinished)</string>
    <string name="mshook_gen_generate">Generate</string>
    <string name="mshook_gen_resolute">Resolute</string>
    <string name="mshook_gen_resolute_copy">Copy</string>
    <string name="mshook_gen_resolute_copy_message">Copied</string>

    <string name="dialog_grant_permission">Please grant permission</string>
    <string name="dialog_grant_external_storage_message">External storage permission is necessary</string>

    <string name="dialog_version_error_title">Version Error</string>
    <string name="dialog_version_error_message">Cache version and Minecraft PE version do not match\nDo you delete the cache?</string>
    <string name="dialog_version_error_positive">Yes</string>
    <string name="dialog_version_error_negative">Generate as it is</string>
    <string name="title_activity_sub_pack_editor">SubPackEditor</string>
</resources>
