<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:showDividers="middle"
        app:divider="@drawable/divider">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="36sp"/>

            <TextView
                android:id="@+id/appVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="28sp"
                />

            <TextView
                android:id="@+id/appVersionCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version_code"
                android:textSize="28sp"
                />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_author"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/aboutWebsiteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:text="@string/about_website"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/aboutGithubButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:text="@string/about_github"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/aboutGooglePlusButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:text="@string/about_google_plus"
                android:textSize="16sp"/>
        </android.support.v7.widget.LinearLayoutCompat>


    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>