<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut_resource_pack_gen"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:shortcutShortLabel="@string/drawer_resource_pack_gen"
        android:shortcutLongLabel="@string/drawer_resource_pack_gen"
        android:shortcutDisabledMessage="@string/drawer_resource_pack_gen">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="jp.riku1227.bedrockpro"
            android:targetClass="jp.riku1227.bedrockpro.activity.MainActivity">

            <extra
                android:name="shortcut_id"
                android:value="ResourcePackGenFragment"
                />

        </intent>

    </shortcut>

    <shortcut
        android:shortcutId="shortcut_behavior_pack_gen"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:shortcutShortLabel="@string/drawer_behavior_pack_gen"
        android:shortcutLongLabel="@string/drawer_behavior_pack_gen"
        android:shortcutDisabledMessage="@string/drawer_behavior_pack_gen">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="jp.riku1227.bedrockpro"
            android:targetClass="jp.riku1227.bedrockpro.activity.MainActivity">

            <extra
                android:name="shortcut_id"
                android:value="BehaviorPackGenFragment"
                />

        </intent>

    </shortcut>

    <shortcut
        android:shortcutId="shortcut_mshook_gen"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:shortcutShortLabel="@string/drawer_util_mshook_gen"
        android:shortcutLongLabel="@string/drawer_util_mshook_gen"
        android:shortcutDisabledMessage="@string/drawer_util_mshook_gen">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="jp.riku1227.bedrockpro"
            android:targetClass="jp.riku1227.bedrockpro.activity.MainActivity">

            <extra
                android:name="shortcut_id"
                android:value="MSHookGen"
                />

        </intent>

    </shortcut>

    <shortcut
        android:shortcutId="shortcut_backup_apk"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:shortcutShortLabel="@string/drawer_util_backup_apk"
        android:shortcutLongLabel="@string/drawer_util_backup_apk"
        android:shortcutDisabledMessage="@string/drawer_util_backup_apk">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="jp.riku1227.bedrockpro"
            android:targetClass="jp.riku1227.bedrockpro.activity.MainActivity">

            <extra
                android:name="shortcut_id"
                android:value="BackupApk"
                />

        </intent>

    </shortcut>
</shortcuts>