<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/CardViewBase">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/msHookGenFunctionName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mshook_gen_function_name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/msHookGenReturnValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mshook_gen_return_value" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardViewBase">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/msHookGenGenerate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ButtonBase"
                    android:text="@string/mshook_gen_generate"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/CardViewBase">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/msHookGenResoluteFunction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mshook_gen_resolute"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/msHookgenResoluteFunctionCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ButtonBase"
                    android:text="@string/mshook_gen_resolute_copy"
                    />

                <TextView
                    android:id="@+id/msHookGenResoluteMSHook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mshook_gen_resolute"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/msHookgenResoluteMSHookCopy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/ButtonBase"
                    android:text="@string/mshook_gen_resolute_copy"
                    />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>