<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_sub_pack_card_view"
        style="@style/CardViewBase">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/resource_pack_gen_sub_pack_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/resource_pack_gen_sub_pack_name"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/resource_pack_gen_sub_pack_directory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/resource_pack_gen_sub_pack_directory"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/resource_pack_gen_sub_pack_memory_tier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/resource_pack_gen_sub_pack_memory_tier"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>